--- a/a.html
+++ b/a.html
@@ -2,7 +2,7 @@
 <body>
 	<h1>H1 thing</h1>
 	<div id="box">
-		<img id="gloves"></img>
+		<img src="gloves.png" id="gloves"></img>
 		<img src="shirt.png" id="shirt"></img>
 	</div>
 </body>
